crates/nash-can/src/snapshots/nash_can__module__tests__module_header_keeps_package_context.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Json.Decode exposing (decodeString)\n"
---
Header {
    name: ModuleName {
        package: Some(
            PackageName {
                author: "nash",
                project: "compiler",
            },
        ),
        name: "Json.Decode",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 30,
                    },
                    end: Position {
                        line: 1,
                        column: 42,
                    },
                },
                value: Value(
                    "decodeString",
                ),
            },
        ],
    ),
}
