crates/nash-can/src/snapshots/nash_can__module__tests__module_header_reports_unresolved_exported_upper_names.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Missing)\n"
---
UnresolvedExportedUpperName {
    region: Region {
        start: Position {
            line: 1,
            column: 23,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    name: "Missing",
}
