crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_rejects_imports.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport List\n"
---
UnsupportedImports
