crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_rejects_values.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nmain = 42\n"
---
UnsupportedValues
