crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_ambiguous_explicit_and_open_imported_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Maybe exposing (Maybe)\n\nimport Option exposing (..)\n\ntype alias Wrapped a = Maybe a\n"
---
[
    AmbiguousType {
        region: Region {
            start: Position {
                line: 7,
                column: 24,
            },
            end: Position {
                line: 7,
                column: 29,
            },
        },
        prefix: None,
        name: "Maybe",
        first_module: ModuleName {
            package: None,
            name: "Maybe",
        },
        other_modules: [
            ModuleName {
                package: None,
                name: "Option",
            },
        ],
    },
]
